<resources>
    <string name="url_app_service_agreement">https://violas.io/violas_service_html/Terms_of_Service</string>
    <string name="url_app_privacy_policy">https://violas.io/violas_service_html/Privacy_Policy</string>
    <string name="url_app_help_and_feedback">https://www.baidu.com/</string>
    <string name="url_bank_service_agreement">https://violas.io/violas_service_html/Terms_of_Service</string>
    <string name="common_action_cancel_space">Cancel</string>
    <string name="common_action_cancel">Cancel</string>
    <string name="common_action_ok_space">OK</string>
    <string name="common_action_ok">OK</string>
    <string name="common_action_confirm_space">Confirm</string>
    <string name="common_action_confirm">Confirm</string>
    <string name="common_action_select_token">Select Token</string>
    <string name="common_action_retry">Retry</string>
    <string name="common_action_all">All</string>
    <string name="common_desc_value_null">--</string>
    <string name="common_state_cancelled">Cancelled</string>
    <string name="common_state_submitted">Submitted</string>
    <string name="common_label_balance_with_unit_format">Balance: %1$s %2$s</string>
    <string name="common_label_balance_format">Balance: %1$s</string>
    <string name="common_label_available_balance">Available balance:&#160;</string>
    <string name="common_label_gas_fees">Gas Fees</string>
    <string name="common_label_gas_fees_colon">Gas Fees:&#160;</string>
    <string name="common_label_miner_fees">Miner Fees</string>
    <string name="common_label_miner_fees_colon">Miner Fees:&#160;</string>
    <string name="common_label_time">Time</string>
    <string name="common_label_amount">Amount</string>
    <string name="common_label_state">State</string>
    <string name="common_title_wallet_management">Manage Wallet</string>
    <string name="common_title_address_book">Address Book</string>
    <string name="common_title_settings">Settings</string>
    <string name="common_title_multi_language">Languages</string>
    <string name="common_title_service_agreement">Service Agreement</string>
    <string name="common_title_privacy_policy">Privacy Policy</string>
    <string name="common_title_about_us">About Us</string>
    <string name="common_title_help_feedback">Help &amp; Feedback</string>
    <string name="common_title_feedback">Feedback</string>
    <string name="common_title_prompt">Prompt</string>
    <string name="common_content_user_agreement">"User Agreement"</string>
    <string name="common_content_privacy_policy">"Privacy Policy"</string>
    <string name="common_tips_account_empty">Please create/import wallet first</string>
    <string name="common_tips_account_error">Wallet account does not exist</string>
    <string name="common_tips_insufficient_available_balance">Insufficient balance</string>
    <string name="common_tips_insufficient_available_balance_format">Insufficient %1$s balance</string>
    <string name="common_tips_exit_app">Click again to exit</string>
    <string name="common_tips_copy_success">Copy Success</string>
    <string name="common_tips_chain_network_is_different_format">%1$s chain network is different</string>
    <string name="chain_tips_payee_account_not_active">The payee account is not activated</string>
    <string name="welcome_title_1">Welcome to</string>
    <string name="welcome_title_2">Violas</string>
    <string name="welcome_action">Enter</string>
    <string name="home_tab_wallet">Wallet</string>
    <string name="home_tab_market">Market</string>
    <string name="home_tab_bank">Bank</string>
    <string name="home_tab_me">Profile</string>
    <string name="home_wallet_label_total_asset">Total Asset</string>
    <string name="home_wallet_label_assets">Assets</string>
    <string name="home_wallet_action_web_logged">Web Wallet Logged</string>
    <string name="home_wallet_action_transfer">Transfer</string>
    <string name="home_wallet_action_receive">Receive</string>
    <string name="home_wallet_action_mapping">Mapping</string>
    <string name="home_wallet_action_create_wallet">Create Wallet</string>
    <string name="home_wallet_action_import_wallet">Import Wallet</string>
    <string name="create_wallet_title">Create Wallet</string>
    <string name="create_wallet_hint_1">8–20 characters and include both numbers and letters in upper and lower case</string>
    <string name="create_wallet_hint_2">Repeat password</string>
    <string name="create_wallet_action_1">Create</string>
    <string name="create_wallet_action_2">I have read and agree with the "User Agreement" and "Privacy Policy"</string>
    <string name="create_wallet_tips_1">Please read and agree to the "User Agreement" and "Privacy Policy"</string>
    <string name="create_wallet_tips_2">Invalid Wallet Access Code</string>
    <string name="import_wallet_title">Import Wallet</string>
    <string name="import_wallet_hint_mnemonics">Type in Mnemonic words in the original order and separated by space</string>
    <string name="import_wallet_hint_pwd">8–20 characters and include both numbers and letters in upper and lower case</string>
    <string name="import_wallet_hint_comfirm_pwd">Confirm password</string>
    <string name="import_wallet_action_start_import">Start Import</string>
    <string name="import_wallet_tips_two_pwd_not_equals">Invalid Wallet Access Code</string>
    <string name="import_wallet_tips_mnemonics_error">Mnemonic Words Error</string>
    <string name="mnemonic_backup_prompt_title">Backup Reminder</string>
    <string name="mnemonic_backup_prompt_desc_1">Get Mnemonics</string>
    <string name="mnemonic_backup_prompt_desc_2">Equals to own the wallet</string>
    <string name="mnemonic_backup_prompt_desc_3">Backup Mnemonics</string>
    <string name="mnemonic_backup_prompt_desc_4">Write down the Mnemonics in order to recover your wallet</string>
    <string name="mnemonic_backup_prompt_desc_5">Keep It Offline</string>
    <string name="mnemonic_backup_prompt_desc_6">Keep it secure offline. Do not share or transmit it online</string>
    <string name="mnemonic_backup_prompt_action_1">Start Backup</string>
    <string name="mnemonic_backup_prompt_action_2">Backup Later</string>
    <string name="mnemonic_backup_show_title">Backup Mnemonics</string>
    <string name="mnemonic_backup_show_desc_1">Write down the Mnemonics in order</string>
    <string name="mnemonic_backup_show_desc_2">Don\'t copy &amp; paste the Mnemonics</string>
    <string name="mnemonic_backup_show_action">Next</string>
    <string name="mnemonic_backup_confirm_title">Confirm Mnemonics</string>
    <string name="mnemonic_backup_confirm_desc">Click your Mnemonic words in the original order</string>
    <string name="mnemonic_backup_confirm_action">Complete</string>
    <string name="mnemonic_backup_confirm_tips_1">Please click in the order of the mnemonic words</string>
    <string name="mnemonic_backup_confirm_tips_2">Your Mnemonic words are not in the original order</string>
    <string name="mnemonic_backup_warn_title">Safety reminder</string>
    <string name="mnemonic_backup_warn_desc">Please backup your Mnemonics in order to recover your wallet and prevent lost of fund!</string>
    <string name="mnemonic_backup_warn_action">Backup Now</string>
    <string name="add_currency_title">Add Currency</string>
    <string name="add_currency_menu">Get Test Coin</string>
    <string name="add_currency_first_title_1">Prompt</string>
    <string name="add_currency_first_title_2">Please Activate First</string>
    <string name="add_currency_first_desc_format">To activate %1$s for the first time, you need to pay a small fee to the system for activation. The system will default to select a currency with a balance on the same chain for payment</string>
    <string name="add_currency_first_action_1">Confirm</string>
    <string name="add_currency_first_action_2">Cancel</string>
    <string name="add_currency_first_tips_add_failure">There are not enough %1$s or network exceptions, please try again later.</string>
    <string name="currency_details_tab_1">All</string>
    <string name="currency_details_tab_2">In</string>
    <string name="currency_details_tab_3">Out</string>
    <string name="currency_details_action_1">Transfer</string>
    <string name="currency_details_action_2">Receive</string>
    <string name="currency_details_action_3">Swap</string>
    <string name="txn_records_title">Transaction History</string>
    <string name="txn_records_desc_records_empty">No transaction record</string>
    <string name="txn_details_title">Details</string>
    <string name="txn_details_menu">Share</string>
    <string name="txn_details_desc">This address was not added</string>
    <string name="txn_details_action_1">Add Now</string>
    <string name="txn_details_action_2">Browser for more detailed information ></string>
    <string name="txn_details_label_1">Amount:&#160;</string>
    <string name="txn_details_label_2">Gas Fee:&#160;</string>
    <string name="txn_details_label_3">Receiver:&#160;</string>
    <string name="txn_details_label_4">Sender:&#160;</string>
    <string name="txn_details_label_5">No.:&#160;</string>
    <string name="txn_details_state_processing">Processing</string>
    <string name="txn_details_state_transfer_success">Transfer Successful</string>
    <string name="txn_details_state_transfer_failure">Transfer Failed</string>
    <string name="txn_details_state_collection_success">Receive Successful</string>
    <string name="txn_details_state_collection_failure">Receive Failed</string>
    <string name="txn_details_state_add_currency_success">Stable Coin Publish Successful</string>
    <string name="txn_details_state_add_currency_failure">Stable Coin Publish Failed</string>
    <string name="txn_details_state_transaction_success">Transaction Successful</string>
    <string name="txn_details_state_transaction_failure">Transaction Failed</string>
    <string name="save_picture_title">Save To Album</string>
    <string name="save_picture_tips_success">Saved to album</string>
    <string name="save_picture_tips_failure">Failed to save to album</string>
    <string name="save_picture_need_permissions_desc">You need storage permission to save images</string>
    <string name="save_picture_set_permissions_title">Get storage permission</string>
    <string name="save_picture_set_permissions_desc">You need to get the storage permission to save the image. Go to open.</string>
    <string name="transfer_title">Transfer</string>
    <string name="transfer_title_format">%1$s Transfer</string>
    <string name="transfer_label_balance_format">Balance: %1$s %2$s</string>
    <string name="transfer_label_receiver_address">Recipient Address</string>
    <string name="about_us_website_key">Official Website</string>
    <string name="about_us_website_value">https://violas.io</string>
    <string name="about_us_email_key">Email Address</string>
    <string name="about_us_email_value">violas.team@violas.io</string>
    <string name="about_us_wechat_key">WeChat</string>
    <string name="about_us_wechat_value">xxxxx</string>
    <string name="about_us_telegram_key">Telegram</string>
    <string name="about_us_telegram_value">xxxxx</string>
    <string name="about_us_twitter_key">Twitter</string>
    <string name="about_us_twitter_value">xxxxx</string>
    <string name="about_us_facebook_key">Facebook</string>
    <string name="about_us_facebook_value">xxxxx</string>
    <string name="init_wallet_title_create_wallet_format">Create%1$s Wallet</string>
    <string name="init_wallet_title_import_wallet_format">Import%1$s Wallet</string>
    <string name="init_wallet_action_create">Create</string>
    <string name="init_wallet_hint_wallet_name">Input Nickname</string>
    <string name="init_wallet_hint_wallet_pwd">Input Wallet Access Code</string>
    <string name="init_wallet_hint_confirm_wallet_pwd">Confirm Wallet Access Code</string>
</resources>