<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="35dp"
    android:layout_marginEnd="35dp"
    tools:context=".ui.account.wallet.ImportWalletActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginTop="@dimen/dp_56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_bitcoin_big" />

    <TextView
        android:id="@+id/tvCreateHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/init_wallet_title_create_wallet_format"
        android:textColor="#3C3848"
        android:textSize="@dimen/fs_21"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/selector_edit_bg_line"
        android:hint="@string/init_wallet_hint_wallet_name"
        android:maxLength="20"
        android:textSize="@dimen/fs_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateHint" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/PasswordRules"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@drawable/selector_edit_bg_line"
        android:hint="@string/init_wallet_hint_wallet_pwd"
        android:inputType="textPassword"
        android:textSize="@dimen/fs_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editConfirmPassword"
        style="@style/PasswordRules"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@drawable/selector_edit_bg_line"
        android:hint="@string/init_wallet_hint_confirm_wallet_pwd"
        android:inputType="textPassword"
        android:textSize="@dimen/fs_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/BaseButtonPrimary"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_56"
        android:text="@string/init_wallet_action_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>