<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.identity.importIdentity.ImportIdentityActivity">

    <EditText
        android:id="@+id/editMnemonicWord"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/shape_edit_mnemonic_bg"
        android:gravity="start"
        android:hint="@string/import_wallet_hint_mnemonics"
        android:maxLines="5"
        android:paddingStart="15dp"
        android:paddingTop="22dp"
        android:paddingEnd="15dp"
        android:paddingBottom="22dp"
        android:textSize="@dimen/fs_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.violas.wallet.widget.PasswordEditText
        android:id="@+id/editPassword"
        style="@style/PasswordRules"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/selector_edit_bg_line"
        android:hint="@string/import_wallet_hint_pwd"
        android:inputType="textPassword"
        android:textSize="@dimen/fs_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMnemonicWord" />

    <com.violas.wallet.widget.PasswordEditText
        android:id="@+id/editConfirmPassword"
        style="@style/PasswordRules"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/selector_edit_bg_line"
        android:hint="@string/import_wallet_hint_comfirm_pwd"
        android:inputType="textPassword"
        android:textSize="@dimen/fs_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/BaseButtonPrimary"
        android:layout_marginTop="@dimen/dp_57"
        android:text="@string/import_wallet_action_start_import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>