<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.backup.BackupPromptActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_page_start"
        android:paddingEnd="@dimen/spacing_page_end">

        <TextView
            android:id="@+id/tv_backup_prompt_desc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:fontFamily="@string/font_family_title"
            android:text="@string/mnemonic_backup_prompt_desc_1"
            android:textSize="@dimen/fs_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_backup_prompt_desc_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/mnemonic_backup_prompt_desc_2"
            android:textSize="@dimen/fs_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_desc_1" />

        <ImageView
            android:id="@+id/iv_backup_prompt_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:src="?attr/mnemonicBackupKeyIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_desc_6" />

        <TextView
            android:id="@+id/tv_backup_prompt_desc_2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_62"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_51"
            android:text="@string/mnemonic_backup_prompt_desc_3"
            android:textSize="@dimen/fs_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_backup_prompt_image" />

        <TextView
            android:id="@+id/tv_backup_prompt_desc_3"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:lineSpacingExtra="@dimen/dp_10"
            android:text="@string/mnemonic_backup_prompt_desc_4"
            android:textSize="@dimen/fs_12"
            app:layout_constraintEnd_toEndOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintStart_toStartOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_desc_2" />

        <View
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_5"
            android:background="@drawable/shape_circle_black"
            app:layout_constraintBottom_toBottomOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintEnd_toStartOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintTop_toTopOf="@id/tv_backup_prompt_desc_2" />

        <TextView
            android:id="@+id/tv_backup_prompt_desc_4"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_21"
            android:text="@string/mnemonic_backup_prompt_desc_5"
            android:textSize="@dimen/fs_16"
            app:layout_constraintEnd_toEndOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintStart_toStartOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_desc_3" />

        <TextView
            android:id="@+id/tv_backup_prompt_desc_5"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:lineSpacingExtra="@dimen/dp_10"
            android:text="@string/mnemonic_backup_prompt_desc_6"
            android:textSize="@dimen/fs_12"
            app:layout_constraintEnd_toEndOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintStart_toStartOf="@id/tv_backup_prompt_desc_2"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_desc_4" />

        <View
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_marginEnd="@dimen/dp_5"
            android:background="@drawable/shape_circle_black"
            app:layout_constraintBottom_toBottomOf="@id/tv_backup_prompt_desc_4"
            app:layout_constraintEnd_toStartOf="@id/tv_backup_prompt_desc_4"
            app:layout_constraintTop_toTopOf="@id/tv_backup_prompt_desc_4" />

        <Button
            android:id="@+id/tv_backup_prompt_next_step"
            style="@style/BaseButtonPrimary"
            android:layout_marginTop="@dimen/dp_46"
            android:text="@string/mnemonic_backup_prompt_action_1"
            app:layout_constraintBottom_toTopOf="@id/tvBackupLater"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_desc_5"
            app:layout_goneMarginBottom="@dimen/dp_56" />

        <TextView
            android:id="@+id/tvBackupLater"
            android:layout_width="@dimen/dp_238"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/mnemonic_backup_prompt_action_2"
            android:textColor="@color/selector_text_gray"
            android:textSize="@dimen/fs_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_backup_prompt_next_step" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>